# LEAN_CNN_pruning

./: .gitignore  Cargo.toml  README.md  environment.yml  graph_algorithms.py  graph_prune_utils.py  model_pruning_functions.py  norm_calculation_methods.py  pruning_algorithms.py  pruning_utils.py  setup.py  torch_pruning_methods.py
benches/: my_benchmark.rs
examples/: generate_example_data.py  prune_example_msd.py  train_example_msd.py
examples/pruned_models/: msd_network2_LEAN_d=50_ratio=0.0500_acc=0.9030.torch  msd_network2_LEAN_d=50_ratio=0.0611_acc=0.9113.torch  msd_network2_LEAN_d=50_ratio=0.0745_acc=0.9252.torch  msd_network2_LEAN_d=50_ratio=0.0910_acc=0.9260.torch  msd_network2_LEAN_d=50_ratio=0.1112_acc=0.9348.torch  msd_network2_LEAN_d=50_ratio=0.1357_acc=0.9349.torch  msd_network2_LEAN_d=50_ratio=0.1657_acc=0.9389.torch  msd_network2_LEAN_d=50_ratio=0.2024_acc=0.9382.torch  msd_network2_LEAN_d=50_ratio=0.2471_acc=0.9477.torch  msd_network2_LEAN_d=50_ratio=0.3017_acc=0.9474.torch  msd_network2_LEAN_d=50_ratio=0.3684_acc=0.9514.torch  msd_network2_LEAN_d=50_ratio=0.4498_acc=0.9524.torch  msd_network2_LEAN_d=50_ratio=0.5493_acc=0.9535.torch  msd_network2_LEAN_d=50_ratio=0.6707_acc=0.9535.torch  msd_network2_LEAN_d=50_ratio=0.8190_acc=0.9527.torch  msd_network2_indivL1_d=50_ratio=0.0500_acc=0.8063.torch  (+77 more)
model_backbones/: resnet_seg_model.py  unet_seg_model.py
model_backbones/resnet/: resnet.py
src/: edge.rs  fast_graph.rs  lib.rs  main.rs  norm_group.rs  python_bindings.rs
tests/: test_graph_algorithms.py  test_operatornorm.py  test_pruning_methods.py
(+1978 files in other folders)
