[package]
name = "n_longest_paths"
version = "0.1.0"
authors = ["Allard Hendriksen <allard.hendriksen@cwi.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "n_longest_paths"
crate-type = ["cdylib", "rlib"]


[dependencies]
npy = "0.4"
npy-derive = "0.4"
structopt = "0.3.13"
pbr = "1.0"
ndarray = "0.14"
numpy = "0.13"


[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
